syntax = "proto3";
package baeldung;
option java_package = "com.baeldung.protobuf";
option java_outer_classname = "BaeldungTraining";

message Course {
  int32 id = 1;
  string courseName = 2;
  repeated Student student = 3;
}

message Student {
  int32 id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  repeated PhoneNumber phone = 5;
  message PhoneNumber {
    string number = 1;
    PhoneType type = 2;
  }
  enum PhoneType {
    MOBILE = 0;
    LANDLINE = 1;
  }
}